<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/flGesamt">

    <Button
        android:id="@+id/buNeu"
        android:textSize="@dimen/textGroesse"
        android:textColor="@color/textFarbe"
        android:textAllCaps="false"
        android:text="@string/buNeuString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvAusgabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/abstand"
        android:text="@string/tvAusgabeString"
        android:textColor="@color/textFarbe"
        android:textSize="@dimen/textGroesse" />

    <ImageView
        android:id="@+id/ivBild0"
        app:srcCompat="@drawable/rot"
        android:tag="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivBildString"
        android:layout_marginLeft="@dimen/ivBild0Left"
        android:layout_marginStart="@dimen/ivBild0Left"
        android:layout_marginTop="@dimen/ivBild0Top"/>

</FrameLayout>