<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_returnValue"
                android:layout_width="204dp"
                android:layout_height="31dp" />

            <Button
                android:id="@+id/newEntriesButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/newEntriesButton_name" />

            <Button
                android:id="@+id/entriesButton"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/entriesButton_name" />

            <Button
                android:id="@+id/returnValueBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Rückgabewerte" />

            <Button
                android:id="@+id/progressBarBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:text="ProgressBar" />

            <Button
                android:id="@+id/dynamicSquareBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="zufällige Vierecke"
                android:textAlignment="center" />

            <Button
                android:id="@+id/SquareGameBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quadrate Spiel" />

            <Button
                android:id="@+id/keyValueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Schlüssel-Wert-Speicher" />

            <Button
                android:id="@+id/addElementActivityBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Elemente Hinzufügen" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/exitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exitButton_name" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>